--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,90 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.global-wrapper {
+  width: 1440px;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 6vh;
+  -webkit-box-shadow: 0 4px 2px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 4px 2px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
+}
+
+.header .header__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 20px;
+  height: 100%;
+  width: 270px;
+}
+
+.header .header__left h1 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.header .header__left .burger:hover {
+  cursor: pointer;
+}
+
+.header .dots {
+  margin-right: 20px;
+}
+
+.header .dots:hover {
+  cursor: pointer;
+}
+
+.main {
+  height: 94vh;
+}
+
+@media only screen and (max-width: 1440px) {
+  .global-wrapper {
+    width: 100%;
+  }
+}
+/*# sourceMappingURL=style.css.map */
