--- a/style/style.css
+++ b/style/style.css
@@ -80,11 +80,138 @@ li {
 
 .main {
   height: 94vh;
+  padding: 80px 30px 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.tools-wrapper {
+  width: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.tools-wrapper .main-tools {
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
+}
+
+.tools-wrapper .main-tools__item {
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tools-wrapper .main-tools__item img {
+  margin: 0 20px 0 10px;
+}
+
+.tools-wrapper .main-tools__item:hover {
+  cursor: pointer;
+  border: 2px solid gray;
+}
+
+.tools-wrapper .color-tools {
+  margin-top: 80px;
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
+}
+
+.tools-wrapper .color-tools__item {
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tools-wrapper .color-tools__item .color {
+  margin: 0 20px 0 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+
+.tools-wrapper .color-tools__item .color--current {
+  background-color: gray;
+}
+
+.tools-wrapper .color-tools__item .color--prev {
+  background-color: greenyellow;
+}
+
+.tools-wrapper .color-tools__item .color--red {
+  background-color: lightcoral;
+}
+
+.tools-wrapper .color-tools__item .color--blue {
+  background-color: lightblue;
+}
+
+.tools-wrapper .color-tools__item:hover {
+  cursor: pointer;
+  border: 2px solid gray;
+}
+
+.canvas-wrapper {
+  margin-right: 100px;
+  width: 512px;
+  height: 512px;
+  background-color: lightgray;
 }
 
 @media only screen and (max-width: 1440px) {
   .global-wrapper {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .tools-wrapper {
+    width: 520px;
+    -webkit-box-orient: initial;
+    -webkit-box-direction: initial;
+        -ms-flex-direction: initial;
+            flex-direction: initial;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
+  .tools-wrapper .main-tools {
+    width: 250px;
+    margin: 0 0 20px 0;
+  }
+  .tools-wrapper .color-tools {
+    width: 250px;
+    margin: 0 0 20px 20px;
+  }
+  .canvas-wrapper {
+    margin: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
