--- a/style/style.scss
+++ b/style/style.scss
@@ -72,11 +72,112 @@ li {
 
 .main {
   height: 94vh;
-  // background-color: lightgray;
+  padding: 80px 30px 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.tools-wrapper {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+
+  .main-tools {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
+  }
+
+  .main-tools__item {
+    height: 50px;
+    display: flex;
+    align-items: center;
+
+    img {
+      margin: 0 20px 0 10px;
+    }
+
+    &:hover {
+      cursor: pointer;
+      border: 2px solid gray;
+    }
+  }
+
+  .color-tools {
+    margin-top: 80px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
+  }
+
+  .color-tools__item {
+    height: 50px;
+    display: flex;
+    align-items: center;
+
+    .color {
+      margin: 0 20px 0 10px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      border: 1px solid black;
+    }
+
+    .color--current {
+      background-color: gray;
+    }
+
+    .color--prev {
+      background-color: greenyellow;
+    }
+
+    .color--red {
+      background-color: lightcoral;
+    }
+
+    .color--blue {
+      background-color: lightblue;
+    }
+
+    &:hover {
+      cursor: pointer;
+      border: 2px solid gray;
+    }
+  }
+}
+
+.canvas-wrapper {
+  margin-right: 100px;
+  width: 512px;
+  height: 512px;
+  background-color: lightgray;
 }
 
 @media only screen and (max-width: 1440px) {
   .global-wrapper {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .main {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .tools-wrapper {
+    width: 520px;
+    flex-direction: initial;
+    justify-content: left;
+
+    .main-tools {
+      width: 250px;
+      margin: 0 0 20px 0;
+    }
+
+    .color-tools {
+      width: 250px;
+      margin: 0 0 20px 20px;
+    }
+  }
+
+  .canvas-wrapper {
+    margin: 0;
   }
 }
