--- a/style/style.scss
+++ b/style/style.scss
@@ -1,18 +1,8 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   padding: 0;
 
   font-family: sans-serif;
-}
-
-a {
-  display: inline-block;
-
-  text-decoration: none;
 }
 
 ul,
@@ -29,8 +19,8 @@ li {
 
 .global-wrapper {
   width: 1440px;
-  margin: 0 auto;
   height: 100vh;
+  margin: 0 auto;
 }
 
 .header {
@@ -38,19 +28,20 @@ li {
   justify-content: space-between;
   align-items: center;
   height: 6vh;
-  box-shadow: 0 4px 2px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
 
+  box-shadow: 0 4px 2px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
 
   .header__left {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 20px;
-    height: 100%;
     width: 270px;
+    height: 100%;
+    margin-left: 20px;
 
     h1 {
       margin: 0;
+
       font-size: 1.5rem;
     }
 
@@ -71,52 +62,54 @@ li {
 }
 
 .main {
-  height: 94vh;
-  padding: 80px 30px 80px;
   display: flex;
   justify-content: space-between;
+  height: 94vh;
+  padding: 80px 30px 80px;
 }
 
 .tools-wrapper {
-  width: 250px;
   display: flex;
   flex-direction: column;
+  width: 250px;
 
   .main-tools {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
   }
 
   .main-tools__item {
-    height: 50px;
     display: flex;
     align-items: center;
+    height: 50px;
 
     img {
       margin: 0 20px 0 10px;
     }
 
     &:hover {
-      cursor: pointer;
       border: 2px solid gray;
+      cursor: pointer;
     }
   }
 
   .color-tools {
     margin-top: 80px;
+
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.24), 0 0 4px rgba(0, 0, 0, 0.12);
   }
 
   .color-tools__item {
-    height: 50px;
     display: flex;
     align-items: center;
+    height: 50px;
 
     .color {
-      margin: 0 20px 0 10px;
       width: 20px;
       height: 20px;
-      border-radius: 50%;
+      margin: 0 20px 0 10px;
+
       border: 1px solid black;
+      border-radius: 50%;
     }
 
     .color--current {
@@ -136,17 +129,40 @@ li {
     }
 
     &:hover {
-      cursor: pointer;
       border: 2px solid gray;
+      cursor: pointer;
     }
   }
 }
 
 .canvas-wrapper {
-  margin-right: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 512px;
-  height: 512px;
-  background-color: lightgray;
+  height: 600px;
+  margin-right: 100px;
+
+  .size-switcher {
+    display: flex;
+    justify-content: space-around;
+
+    .size-switcher__item {
+      padding: 0 20px 0 20px;
+
+      &:hover {
+        border: 2px solid gray;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .canvas {
+    width: 512px;
+    height: 512px;
+
+    background-color: lightgray;
+  }
 }
 
 @media only screen and (max-width: 1440px) {
@@ -162,9 +178,9 @@ li {
   }
 
   .tools-wrapper {
-    width: 520px;
     flex-direction: initial;
     justify-content: left;
+    width: 520px;
 
     .main-tools {
       width: 250px;
